weather map, map doesn't search yet

--- a/weather_map.html
+++ b/weather_map.html
@@ -112,63 +112,68 @@
 (function() {
 "use strict";
 
-            // Set our map options
-
-            var mapOptions = {
-                // Set the zoom level
-                zoom: 19,
-
-                // This sets the center of the map at our location
-                center: {
-                    lat: 29.418675,
-                    lng: -98.488021
-                }
-            };
-
-    // Init geocoder object
-    var geocoder = new google.maps.Geocoder();
-    var addressButton = document.getElementById("searchButton");
-
-    submitButton.addEventListener("click", function() {
-        var myAddress = document.getElementById("address").value;
-        geocoder.geocode({ "address": myAddress }, function (results, status) {
-
-// Check for a successful result
-            if (status == google.maps.GeocoderStatus.OK) {
-
-                // Recenter the map over the address
-                console.log(results);
-                map.setCenter(results[0].geometry.location);
-
-                var tempMarker = new google.maps.Marker({
-                    position: results[0].geometry.location,
-                    map: map
-                });
-
-                //    create a new infoWindow object with content
-                var infowindow = new google.maps.InfoWindow({
-                    content: "Here's what you're looking for!"
-                });
-
-                //Open the window using our map and marker
-                infowindow.open(map, tempMarker);
-
-            } else {
-
-
-                // Show an error message with the status if our request fails
-                alert("Geocoding was not successful - STATUS: " + status);
-            }
-        });
-    });
-
-    // Render the map
-    var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-
 
 
 //    weather javascript to retrieve weather data
 function loadWeather(){
+
+//
+    // Set our map options
+    var mapOptions = {
+        // Set the zoom level
+        zoom: 19,
+
+        // This sets the center of the map at our location
+        center: {
+            lat: 29.418675,
+            lng: -98.488021
+        }
+    };
+
+    // Init geocoder object
+    var geocoder = new google.maps.Geocoder();
+//
+//     $("#submitButton").click(function(){
+//         var lat = $("#latitudeInput").val();
+//         var lng = $("#longitudeInput").val();
+//         geocoder.geocode({ "address": {"lat":lat, "lng": lng}}, function (results, status) {
+//
+// // Check for a successful result
+//             if (status == google.maps.GeocoderStatus.OK) {
+//
+//                 // Recenter the map over the address
+//                 console.log(results);
+//                 map.setCenter(results[0].geometry.location);
+//
+//                 var tempMarker = new google.maps.Marker({
+//                     position: results[0].geometry.location,
+//                     map: map
+//                 });
+//
+//                 //    create a new infoWindow object with content
+//                 var infowindow = new google.maps.InfoWindow({
+//                     content: "Here's what you're looking for!"
+//                 });
+//
+//                 //Open the window using our map and marker
+//                 infowindow.open(map, tempMarker);
+//
+//             } else {
+//
+//
+//                 // Show an error message with the status if our request fails
+//                 alert("Geocoding was not successful - STATUS: " + status);
+//             }
+//         });
+//     });
+//
+//     // Render the map
+    var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+//
+
+
+
+
 
 
     var weather = "";
@@ -188,6 +193,11 @@ function loadWeather(){
             console.log(forecast);
 
 
+
+
+
+
+            //getting the weather:
 
             forecast.list.forEach(function (forecast, index) {
                 function clearWeather(){
