--- a/es6.html
+++ b/es6.html
@@ -8,7 +8,8 @@
 
 
 
-<script src="js/es6.js"></script>
+<!--<script src="js/es6.js"></script>-->
+<script src="js/map-filter-reduce.js"></script>
 </body>
 </html>
 
