promises exercises, seting up webpack

--- a/promises.html
+++ b/promises.html
@@ -5,9 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<input id="input" type="text" placeholder="input username" autofocus>
-<button id="submitButton" type="submit">Submit</button>
 
+<label>Github Username:
+<input id="input" type="text" placeholder="input username" autofocus>
+<button id="submitButton" type="submit">Find last commit</button>
+</label>
+<p id="output"></p>
 
 <script src="js/jquery.js"></script>
 <script src="js/promises.js"></script>
